NEWS for vmdb2, the Debian disk image builder
=============================================================================

Version 0.1+git, not yet released
---------------------------------


Version 0.1, released 2017-05-13
-----------------------------------------------------------------------------

This is the first release. It can build a UEFI image for the amd64
architecture. It's not meant to really be useful for other people.