@@ -15,3 +15,4 @@ vmdb/plugins/mkfs_plugin.py
 vmdb/plugins/mkimg_plugin.py
 vmdb/plugins/mount_plugin.py
 vmdb/plugins/partition_plugin.py
+vmdb/plugins/rootfs_cache_plugin.py
